--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Raleway:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
     <title>LOREMIPSUM.NET</title>
   </head>
   <body>
